<resources>
    <string name="app_name">Owl</string>

    <!--PROD ANDROID CLIENT ID-->
    <!--
    <string name="server_client_id">408205420427-dfsl4kti2rmfg17mg904096fkgj2gocq.apps.googleusercontent.com</string>
    -->

    <!--PROD WEB CLIENT ID-->
    <string name="server_client_id">408205420427-o39dqm0skueeo1j285lnse4hucm8mt2d.apps.googleusercontent.com</string>

    <!--DEBUG ANDROID CLIENT ID-->
    <!--
    <string name="server_client_id">677487825807-t73eg352637d3snun8h41malbek9ovf7.apps.googleusercontent.com</string>
    -->

    <!--DEBUG WEB CLIENT ID-->
    <!--
    <string name="server_client_id">677487825807-7pp12g1204d07falb4ul7jnilkhta6m2.apps.googleusercontent.com</string>
    -->


    <!-- AWS Account ID -->
    <string name="aws_account_id">971897998846</string>


    <!-- Cognito IAM Unauth Role -->
    <string name="cognito_unauth_role">arn:aws:iam::971897998846:role/Cognito_OwlUnauth_Role</string>


    <!-- Cognito IAM Auth Role -->
    <string name="cognito_auth_role">arn:aws:iam::971897998846:role/Cognito_OwlAuth_Role</string>


    <!-- PROD IDENTITY POOL ID -->
    <!--
    <string name="cognito_identity_pool">us-east-1:5ed00e4f-a16c-41cc-9d15-e36f726a1b3c</string>
    -->

    <!-- DEBUG IDENTITY POOL ID -->

    <string name="cognito_identity_pool">us-east-1:4c7583cd-9c5a-4175-b39e-8690323a893e</string>


    <string name="s3_bucket_name">owl-aws</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale_contacts">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="error_view_canvas">Unable to view Canvas</string>


    <!-- Navigation Drawer -->
    <string name="nav_menu_feed">Feed</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_messages">Messages</string>
    <string name="nav_menu_canvas">My Canvas</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_all_users">All Users</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Activity Titles -->
    <string name="title_activity_main">Owl</string>
    <string name="title_activity_stack">Stack</string>
    <string name="title_activity_upload">Upload</string>


    <!-- Fragment Titles -->
    <string name="title_fragment_feed">Feed</string>
    <string name="title_fragment_canvas">Canvas</string>
    <string name="title_fragment_following">Following</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_message">Messages</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_all_users">All Users</string>
    <string name="title_fragment_likes">Hoots</string>

    <!-- Overflow Meu Actions -->
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>


    <!-- Feed -->
    <string name="text_empty_feed">No photos</string>

    <!-- Canvas -->
    <string name="view_profile">View Profile</string>


    <!-- Message -->
    <string name="messages_coming_soon">Messages Coming Soon</string>

    <!-- Profile -->
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Stack -->
    <string name="photo">Photo</string>
    <string name="stack">Stack</string>
    <string name="message_content_deleted">This content has been deleted</string>
    <string name="message_error_load_content">Error loading content</string>


    <!-- Friends -->
    <string name="all_users">All Users</string>
    <string name="text_empty_followers">No followers</string>
    <string name="text_empty_following">Not following anyone</string>
    <string name="text_empty_all_users">No users found</string>

    <!-- Comments Recycler Adapter-->
    <string name="user_not_found">User not found</string>
    <string name="text_empty_comments">No comments</string>

    <!-- FeedCategoryView -->
    <string name="photos">Photos</string>

    <!-- ProfileCounterView -->
    <string name="hoots">Hoots</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>


    <string name="dialog_title_permission_requested">Permission Request</string>
    <string name="permission_rationale_storage">Device storage permissions
        are needed for uploading photos.</string>

    <string name="dialog_title_delete_photo">Delete Photo</string>
    <string name="dialog_message_delete_photo">Are you sure you want to delete this photo?</string>
    <string name="dialog_title_delete_stack">Delete Stack</string>
    <string name="dialog_message_delete_stack">Are you sure you want to delete this stack?</string>
    <string name="dialog_message_delete_stack_last_photo">Removing the only photo in a stack will automatically delete the stack.  Are you sure you want to delete this stack?\n</string>
    <string name="dialog_title_remove_stack_photo">Remove Photo</string>
    <string name="dialog_message_remove_stack_photo">Are you sure you want to remove this photo from the stack?</string>

    <!--SettingsFragment -->
    <string name="pref_title_category_account">Account</string>
    <string name="pref_key_sign_out">pref_key_sign_out</string>
    <string name="pref_title_sign_out">Sign Out</string>
    <string name="pref_summary_sign_out">Sign out of Owl</string>
    <string name="pref_key_delete_account">pref_key_delete_account</string>
    <string name="pref_title_delete_account">Delete Account</string>
    <string name="pref_summary_delete_account">Permanently delete your Owl account</string>

</resources>
