<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_menu_feed" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_menu_profile" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_menu_messages" />

        <item
            android:id="@+id/nav_canvas"
            android:icon="@drawable/ic_grid_on"
            android:title="@string/nav_menu_canvas" />
        <!--
        <item
            android:id="@+id/nav_friends"
            android:icon="@android:drawable/ic_secure"
            android:title="Following" />
            -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_menu_settings" />
    </group>


    <item android:title="Beta">
        <menu>
            <item
                android:id="@+id/nav_all_users"
                android:icon="@drawable/ic_people"
                android:title="@string/nav_menu_all_users" />
        </menu>
    </item>


</menu>
